Rollback to java 8